# ROS-Robotics-first-project

./: CMakeLists.txt  Instructions  README.md  package.xml
cfg/: parameters.cfg
launch/: launcher.launch
rviz/: project_1.rviz
src/: AgileXCore.cpp  BaselineCalculator.cpp  GearRatioCalculator.cpp  GlobalSync.cpp  LateralWheelSync.cpp  StaticTransformPublisher.cpp
srv/: reset.srv  reset_general.srv
